<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="my_own_app">Capstone: My own app</string>
    <string name="action_about">About</string>
    <string name="guy_bridge">By Guy Bridge</string>
    <string name="about_title">About</string>
    <string name="launch_spotify">Launching the Spotify Streamer App</string>
    <string name="launch_scores">Launching the Scores App</string>
    <string name="launch_library">Launching the Library App</string>
    <string name="launch_build_it_bigger">Launching Build It Bigger</string>
    <string name="launch_xyz">Launching XYZ Reader</string>
    <string name="launch_capstone">Launching my Capstone App</string>

</resources>
